--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+#white {
+    color: white;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -62,4 +66,16 @@ label {
 
 input {
     font-size: 2rem;
+}
+
+li {
+    font-size: 2rem;
+    text-align: left;
+    background-color: #8ADEB47F;
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.block{
+    display:block;
 }
