--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ button {
     border-radius: 7px;
     background-color: #8ADEB4;
     color: white;
+    margin: 0 1rem;
 }
 
 .choice-buttons {
@@ -37,18 +38,19 @@ button {
     margin: .5rem;
 }
 
-.restart-button {
+/* .restart-button {
     display: block;
     margin: 2rem 0;
-}
+} */
 
 h1 {
     font-size: 4.5rem;
+    margin-bottom: 2rem;
 }
 
 p {
     font-size: 2rem;
-    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 h2 {
@@ -78,4 +80,9 @@ li {
 
 .block{
     display:block;
+}
+
+.center {
+    text-align: center;
+    padding:2rem 0;
 }
